<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.InputActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="35dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:text="what ist your sleep schedule?"
            android:textColor="@android:color/black"
            android:textSize="36dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="morning:"
                android:textSize="20dp"
                android:textColor="@android:color/black"/>

            <Button
                android:id="@+id/morningButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#d9d9d9"
                android:onClick="onClickMorningButton"
                android:text="pick a time" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="night:"
                android:textSize="20dp"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/nightButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#d9d9d9"
                android:onClick="onClickNightButton"
                android:text="pick a time" />

            <Button
                android:id="@+id/enterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/design_default_color_primary"
                android:text="enter" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>